--- a/index.html
+++ b/index.html
@@ -1,37 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link
-    href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/fonts/remixicon.css"
-    rel="stylesheet"/>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <link href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/fonts/remixicon.css" rel="stylesheet" />
+  <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-   <div id="main">
-    <div id="left">
-        <div id="lnav">
-            <i class="ri-arrow-left-circle-line"></i>
-            <div id="lnavr">
-                <a href="">Home</a> <a href="">Work</a>
-                <i class="ri-github-line"></i>
-            </div>
-            <div id="textcenter">
-                <h1>HELLO,</h1>
-                <p>I'm Zenia Parvin, studying BCA and simultaneously learning web development, javascript</p>
-                <a href="">read</a>
-            </div>
-        </div>
-    </div>
-    <div id="right">
-        <div id="rtop">
-            <div id="rtopleft"></div>
-            <div id="rtopright"></div>
-        </div>
-        <div id="rbottom"></div>
-    </div>
-   </div>
+  <main>
+    <section class="left">
+      <nav>
+        <ul>
+          <li><a href=""><i class="logo ri-flight-takeoff-line"></i></a></li>
+          <li><a href="">Home</a></li>
+          <li><a href="">Ticket Book</a></li>
+        </ul>
+      </nav>
+      <article>
+        <h1>WORLD TOUR</h1>
+        <h3> with Indigo </h3>
+        <p>World tours refer to international holiday packages offered by travel agencies, like Thomas Cook, which provide trips to destinations such as Europe, Thailand, Dubai, and Australia.
+        </p>
+        <a href="">learn more</a>
+      </article>
+    </section>
+    <aside>
+      <div id="rtopleft">
+        <img src="./left.png" alt="img">
+      </div>
+      <div id="rtopright">
+        <img src="./right.png" alt="img">
+      </div>
+      <div id="rbottom">
+        <img src="./bottom.png" alt="img">
+      </div>
+    </aside>
+  </main>
 </body>
+
 </html>
